Added pagination for friend cards
